--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ video {
 <h1>Storms of 2020</h1>
 <h2>By Zachary Egleston</h2>
 <hr>
-<video width="480" height="280" controls poster="StormsOf2020TeaserGIF.gif">
+<video width="480" height="280" controls poster="Storms of 2020 Teaser GIF Again.gif">
   <source src="StormsOf2020Teaser.mp4" type="video/mp4">
 </video>
 <br>
