--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ video {
 <h2>By Zachary Egleston</h2>
 <hr>
 <video width="480" height="280" controls poster="Storms of 2020 Teaser GIF Again.gif">
-  <source src="StormsOf2020Teaser.mp4" type="video/mp4">
+  <source src="StormsOf2020TeaserAgain.mp4" type="video/mp4">
 </video>
 <br>
 <br>
