--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<link rel = "icon" href =
+"randomlogothing.png" type = "image/x-icon">
 <title>Storms of 2020</title>
 <style type="text/css" media="screen">
 
